@@ -13,74 +13,93 @@
 
 #include <cstdio>
 #include <cstring>
+#include <cassert>
+#include <fcntl.h>
 #include <miosix.h>
-#include <interfaces/disk.h>
 
 using namespace std;
 using namespace miosix;
 
-bool randomAccess=false; ///< Random or sequential access?
-bool writeAccess=false;  ///< Read or write access?
+static bool randomAccess; ///< Random or sequential access?
+static bool writeAccess;  ///< Read or write access?
 
 void testThread(void *)
 {
     const int sizek=32;                ///< Block write size in KByte
     const int sizeb=sizek*1024;        ///< Block write size in Byte
     const int sizei=sizeb/sizeof(int); ///< Block write size in integers
-    const int sizes=sizeb/512;         ///< Block write size in blocks
     int *data=new int[sizei];
-    memset(data,0xaa,sizei);
+    memset(data,0xaa,sizeb);
     Timer timer;
-    const int startAddr=10240; ///< Start address
+    const int startAddr=10240; ///< Start address, skip first sectors
     const int endAddr=2000000; ///< End address ~1GB card
     int addr=startAddr;
+    int fd=open("/dev/sda",O_RDWR,0);
+    if(fd<0)
+    {
+        perror("open");
+        return;
+    }
     for(;;)
     {
-        if(randomAccess) addr=rand()%(endAddr-startAddr-sizeb)+startAddr;
+        if(randomAccess)
+            addr=512*((rand() % (endAddr-startAddr-sizeb/512))+startAddr);
         else {
-            addr+=sizes;
+            addr+=sizeb;
             if(addr>endAddr-sizeb) addr=startAddr;
         }
+        lseek(fd,addr,SEEK_SET);
         timer.start();
         ledOn();
-        if(writeAccess) Disk::write(reinterpret_cast<unsigned char*>(data),addr,sizes);
-        else Disk::read(reinterpret_cast<unsigned char*>(data),addr,sizes);
+        if(writeAccess) if(write(fd,data,sizeb)!=sizeb) assert(false);
+        else; else if(read(fd,data,sizeb)!=sizeb) assert(false);
         ledOff();
         timer.stop();
         float time=timer.interval();
-        time/=1000.0f;
+        time/=TICK_FREQ;
         timer.clear();
         float speed=sizek/static_cast<float>(time);
         printf("time:%0.3fs speed:%0.1fKB/s\n",time,speed);
         if(Thread::testTerminate()) break;
     }
+    close(fd);
     delete[] data;
 }
 
 int main()
 {
+    puts("\n====================");
+    puts("Warning, the write test will destroy the formatting of the SD.");
+    puts("After running that test, format your SD card!");
     for(;;)
     {
-        puts("Read or write access (r/w)?");
-        char line[64];
-        fgets(line,sizeof(line),stdin);
-        if(line[0]=='w') writeAccess=true;
-        if(line[0]=='w' || line[0]=='r') break;
-        puts("Error: insert 'r' or 'w'");
+        writeAccess=false;
+        randomAccess=false;
+        for(;;)
+        {
+            puts("Read or write access, or quit (r/w/q)?");
+            char line[64];
+            fgets(line,sizeof(line),stdin);
+            if(line[0]=='q') goto quit;
+            if(line[0]=='w') writeAccess=true;
+            if(line[0]=='w' || line[0]=='r') break;
+            puts("Error: insert 'r' or 'w' or 'q'");
+        }
+        for(;;)
+        {
+            puts("Random or sequential access (r/s)?");
+            char line[64];
+            fgets(line,sizeof(line),stdin);
+            if(line[0]=='r') randomAccess=true;
+            if(line[0]=='r' || line[0]=='s') break;
+            puts("Error: insert 'r' or 's'");
+        }
+        Thread *t=Thread::create(testThread,4096,1,0,Thread::JOINABLE);
+        printf("Type enter to stop\n");
+        getchar();
+        t->terminate();
+        t->join();
     }
-    for(;;)
-    {
-        puts("Random or sequential access (r/s)?");
-        char line[64];
-        fgets(line,sizeof(line),stdin);
-        if(line[0]=='r') randomAccess=true;
-        if(line[0]=='r' || line[0]=='s') break;
-        puts("Error: insert 'r' or 's'");
-    }
-    Thread *t=Thread::create(testThread,4096,1,0,Thread::JOINABLE);
-    printf("Type enter to stop\n");
-    getchar();
-    t->terminate();
-    t->join();
+    quit:
     printf("Bye\n");
 }
